# blxo

./: .gitignore  AUTHORS  HACKING  Makefile.am  NEWS  README  THANKS  TODO  configure.ac.in
blxo/: Makefile.am  abicheck.sh  blxo-1.pc.in  blxo-2.pc.in  blxo-binding.c  blxo-binding.h  blxo-cell-renderer-ellipsized-text.c  blxo-cell-renderer-ellipsized-text.h  blxo-cell-renderer-icon.c  blxo-cell-renderer-icon.h  blxo-config.c  blxo-config.h.in  blxo-execute.c  blxo-execute.h  blxo-gdk-pixbuf-extensions.c  blxo-gdk-pixbuf-extensions.h  blxo-gobject-extensions.c  blxo-gobject-extensions.h  blxo-gtk-extensions.c  blxo-gtk-extensions.h  blxo-icon-bar.c  blxo-icon-bar.h  blxo-icon-chooser-dialog.c  blxo-icon-chooser-dialog.h  blxo-icon-chooser-model.c  blxo-icon-chooser-model.h  blxo-icon-view-accessible.c  blxo-icon-view.c  blxo-icon-view.h  blxo-job.c  blxo-job.h  blxo-private.c  blxo-private.h  blxo-simple-job.c  blxo-simple-job.h  blxo-string.c  blxo-string.h  blxo-thumbnail-preview.c  blxo-thumbnail-preview.h  blxo-thumbnail.c  (+22 more)
blxo-csource/: Makefile.am
blxo-desktop-item-edit/: Makefile.am  blxo-die-command-entry.c  blxo-die-command-entry.h  blxo-die-command-model.c  blxo-die-command-model.h  blxo-die-desktop-model.c  blxo-die-desktop-model.h  blxo-die-editor.c  blxo-die-editor.h  blxo-die-enum-types.c  blxo-die-enum-types.h  blxo-die-utils.c  blxo-die-utils.h  main.c
blxo-helper/: Makefile.am  blxo-helper-chooser-dialog.c  blxo-helper-chooser-dialog.h  blxo-helper-chooser.c  blxo-helper-chooser.h  blxo-helper-launcher-dialog.c  blxo-helper-launcher-dialog.h  blxo-helper-utils.c  blxo-helper-utils.h  blxo-helper.c  blxo-helper.h  blxo-preferred-applications.desktop.in  blxo-preferred-applications.in  main.c
blxo-helper/helpers/: Fmb.desktop.in.in  Makefile.am  balsa.desktop.in.in  blxo-compose-mail  evolution.desktop.in.in  geary.desktop.in.in  helpers.rc  icedove.desktop.in.in  kmail.desktop.in.in  links.desktop.in.in  lynx.desktop.in.in  mozilla-mailer.desktop.in.in  mutt.desktop.in.in  sylpheed-claws.desktop.in.in  sylpheed.desktop.in.in  thunderbird.desktop.in.in  w3m.desktop.in.in
blxo-open/: Makefile.am  blxo-file-manager.desktop.in  blxo-mail-reader.desktop.in  blxo-terminal-emulator.desktop.in  blxo-web-browser.desktop.in  main.c
docs/reference/: Makefile.am  blxo-csource.xml  blxo-docs.xml  blxo-open.xml  blxo-sections.txt  blxo.types  visual-index.xml
pixmaps/: Makefile.am
po/: POTFILES.in  POTFILES.skip  am.po  ar.po  ast.po  be.po  bg.po  bn.po  ca.po  cs.po  da.po  de.po  el.po  en_AU.po  en_GB.po  es.po  et.po  eu.po  fi.po  fr.po  gl.po  he.po  hr.po  hu.po  hy.po  hy_AM.po  id.po  ie.po  is.po  it.po  ja.po  kk.po  kn.po  ko.po  lt.po  lv.po  ms.po  nb.po  nl.po  nn.po  (+24 more)
tests/: Makefile.am  test-blxo-icon-chooser-dialog.c  test-blxo-noop.c  test-blxo-string.c  test-blxo-wrap-table.c
